--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
 
 env:
-  AWS_REGION: ap-south-1a                   # set this to your preferred AWS region, e.g. us-west-1
+  AWS_REGION: ap-south-1                # set this to your preferred AWS region, e.g. us-west-1
   ECR_REPOSITORY: github-sample           # set this to your Amazon ECR repository name
   CONTAINER_NAME: MY_CONTAINER_NAME           # set this to the name of the container in the
                                                # containerDefinitions section of your task definition
