--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -33,12 +33,21 @@ jobs:
     - name: Login to Amazon ECR
       id: login-ecr
       uses: aws-actions/amazon-ecr-login@v1
+      
+    - name: Printing ECR_REGISTRY and helm version IMAGE_TAG
+      env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          IMAGE_TAG: ${{ github.sha }}
+      run: |
+        echo IMAGE_TAG
+        echo ECR_REGISTRY
 
     - name: Build, tag, and push image to Amazon ECR
       id: build-image
       env:
         ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
         IMAGE_TAG: ${{ github.sha }}
+    
       run: |
         # Build a docker container and
         # push it to ECR so that it can
